# Applied-project-gfoster1

./: CMakeLists.txt  README.md  graphics.cpp  graphics.h  rect.cpp
